<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CraddleVendor</string>
    <string name="home">Home</string>
    <string name="wishList">WishList</string>
    <string name="blogs">Blogs</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="select_country">Select Country</string>
    <string name="category_list">Category List</string>
    <string name="product_list">Product List</string>
    <string name="vendor_list">Vendor List</string>
    <string name="product_details">Product Details</string>
    <string name="cart_list">Cart List</string>
    <string name="currency_symbol">₦</string>
    <string name="specialty_from_africa">Specialty From africa</string>
    <string name="tea">Tea</string>
    <string name="wish_list">Wish List</string>
    <string name="products">PRODUCTS</string>
    <string name="products_in">Product In </string>
    <string name="local_products_manufacturing_in_country">Local Products Manufacturing in Country</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="major_export_market_segment">Major Export Market Segment</string>
    <string name="prodcut_of_all_attraction_manufactured_in_country">Prodcut Of All Attraction Manufactured In Country</string>
    <string name="agricultural_products_exported_from_country">Agricultural Products Exported From Country</string>
    <string name="news_feed">NEWS FEED</string>
    <string name="services">SERVICES</string>
    <string name="innovation">INNOVATION</string>
    <string name="description">Description</string>
    <string name="vendor_details">Vendor details</string>
    <string name="reding_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="retrun_policy">Retrun Policy</string>
    <string name="p_similar_product">Similar Product</string>
    <string name="p_on_sale">On Sale</string>
    <string name="p_daily_need">Daily Need</string>
    <string name="p_new_arrivals">New Arrivals</string>
    <string name="selected_iteams">Selected Iteams</string>
    <string name="checkout">Checkout</string>
    <string name="cart">Cart</string>
    <string name="loading">Loading</string>
    <string name="other">Other</string>
    <string name="item_added">Item added to cart successfully</string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? <font color='#007d43'>SIGN UP</font></string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email ID</string>
    <string name="email_phone_no">Email ID/Phone No</string>
    <string name="email_phonno_or_emailid">Enter Email ID/Phone No</string>
    <string name="emai_invalid">Enter Email</string>
    <string name="email_new">EMAIL ID</string>
    <string name="phone_no">Phone No.</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="business_name">Business Name</string>
    <string name="confrim_password">Confirm Password</string>
    <string name="business_address">Business Address</string>
    <string name="p">Email</string>
    <string name="allready_have_an_account_sign_in">Already have an account ? <font color='#007d43'>SIGN IN</font></string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="invalid_user">Enter User Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="enter_valid_phone">Enter Valid Phone No.</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_landmark">Enter Landmark</string>
    <string name="enter_bus_name">Enter Business Name</string>
    <string name="enter_pass">Password should be minimum 7 digit</string>
    <string name="enter_con">Enter Confrim  Password</string>
    <string name="enter_bus_add">Enter Business Address</string>
    <string name="pass_should_be">Password should be gratter then 7.</string>
    <string name="pass_match">Password should be match.</string>
    <string name="pass_validation">Password must be atleast of 8 characters, 1 alphabet and 1 special character.", title: "Weak Password !</string>
    <string name="password_pattern">Password must be atleast of 8 characters, 1 alphabet and 1 special character.", title: "Weak Password !</string>
    <string name="signup">Signup</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="otp_verificatiion">OTP Verification</string>
    <string name="otp_has_been_sent_to_your_registred_email_address_please_enter_it_blow">OTP has been sent to your registered email address.please enter it blow.</string>
    <string name="continue1">Continue</string>
    <string name="don_t_receive_the_otp_resend_otp">Don\'t receive the Otp? <font color='#007d43'>RESEND OTP</font></string>
    <string name="verify_otp">Please enter verification pin ,Which is sent to your registered email id.</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="subcate_list">SubCategory List</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="view_all">View All</string>
    <string name="welcome_to_saharago">Welcome To SaharaGo</string>
    <string name="buy_sell">Marketplace</string>
    <string name="detail_product">Detail Product</string>
    <string name="my_account">My Account</string>
    <string name="my_address">My Address</string>
    <string name="address">Address</string>
    <string name="old_password">Old Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_old_pass">Enter old password</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="enter_con_pass">Enter confirm password</string>
    <string name="view_all_in_account">VIEW ALL</string>
    <string name="add_review">ADD REVIEW</string>
    <string name="my_review">My Review</string>
    <string name="change_password">Change Password</string>
    <string name="change_or_reset_your_password">Change or Reset Your Password</string>
    <string name="my_order">My Order</string>
    <string name="change_now">CHANGE NOW</string>
    <string name="log_out">Log Out</string>
    <string name="please_enter_your_registered_email_well_send_you_link_to_reset_your_password">Please enter your registered email,well send you link to reset your password.</string>
    <string name="otp">OTP</string>
    <string name="new_password">New Password</string>
    <string name="please_enter_otp_and_reset_your_password">Please enter OTP and reset your Password</string>
    <string name="enter_otp">PleaseEnter otp</string>
    <string name="enter_new_pasword">Please Enter new password</string>
    <string name="enter_confrim_new_pasword">Please Enter confirm password</string>
    <string name="password_vali">Password should minimun length 8.</string>
    <string name="enter_match_password">Enter match password</string>
    <string name="sussfully_change_password">password changed successfully</string>
    <string name="sussfully_add_adress">Successfully add address</string>
    <string name="media">Multimedia</string>
    <string name="multimedia_new">Multimedia</string>
    <string name="please_login_to_view_your_profile">Please Login to View your Profile</string>
    <string name="start_selling">Start Selling</string>
    <string name="hint">**********</string>
    <string name="current_password">Current Password</string>
    <string name="read_more">Read more</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="save">Save</string>
    <string name="add_new_address">Add New Address</string>
    <string name="fill_the_details">Fill the Details</string>
    <string name="mark_this_as_default_address">Mark this as Default Address</string>
    <string name="pay_now">Pay Now</string>
    <string name="state">State</string>
    <string name="locality">Locality</string>
    <string name="pin_code">Pin Code</string>
    <string name="office">Office</string>
    <string name="work">Work</string>
    <string name="no_internet_connection">"No Internet Connection Available "</string>
    <string name="please_select_an_option">Please Select an Option</string>
    <string name="title">Title</string>
    <string name="mark_as_default">Mark as Default</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="address_list">Address List</string>
    <string name="last_name">Last Name</string>
    <string name="type_of_address">Address Type</string>
    <string name="save_address">Save Address</string>
    <string name="We_will_be_soon">"We will be soon serving in \(country). Be in touch !"</string>
    <string name="manage_address">Manage Address</string>
    <string name="add">Add</string>
    <string name="street_address">Street Address</string>
    <string name="landmark">LandMark</string>
    <string name="a_first_name">Please Enter first name</string>
    <string name="a_last_name">Please Enter last name</string>
    <string name="a_mobile_no">Please Enter mobile number</string>
    <string name="a_mobile_email_id">Please Enter mobile No/EmaiD ID </string>
    <string name="a_city">Please Enter city</string>
    <string name="a_state">Please Eenter state</string>
    <string name="a_address">Please Enter address</string>
    <string name="edit_address">Edit Address</string>
    <string name="a_zipcode">Please Enter zipcode</string>
    <string name="zipcode">Zipcode</string>
    <string name="a_country">Please Enter country</string>
    <string name="update_profile">Update Profile</string>
    <string name="add_new_add">Add New Address</string>
    <string name="add_address">Add  Address</string>
    <string name="vendor_s_other_products">Vendor\'s Other Products</string>
    <string name="write_review">Write Review</string>
    <string name="facebook">facebook</string>
    <string name="insta">instagram</string>
    <string name="twitter">twitter</string>
    <string name="what_do_you_think_of_this_product">What do you think of this product?</string>
    <string name="what_would_you_like_to_share_with_us">What would you like to share with us?</string>
    <string name="subject">Subject</string>
    <string name="enter_your_commit">Enter your Comment</string>
    <string name="type_your_commit">Type your Comment</string>
    <string name="characters_remaining_54_150">Characters Remaining: 0 / 150</string>
    <string name="submit_comment">Submit Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="load_more">View More</string>
    <string name="exporter">exporter</string>
    <string name="explore">Explore</string>
    <string name="manufacturer">manufacturer</string>
    <string name="wholesaler">wholesaler</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="fill_the_below_information_to_login_in">Fill the below information to \n Login In</string>
    <string name="otp_enter">Enter the otp  associate with your account</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="bank_sort_code">Bank Sort Code</string>
</resources>