<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/rlBankList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/rac_rounded"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.cradlevendor.customui.CustomTextviewBold
                    android:id="@+id/tvAccountName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/account_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <LinearLayout
                    android:id="@+id/more_button"
                    android:layout_width="@dimen/_17sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp">

                    <ImageView
                        android:id="@+id/iv_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/more" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.cradlevendor.customui.CustomTextView
                    android:id="@+id/tvAccountNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/account_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />
                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/ll_default"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_1sdp"
                    android:layout_marginStart="@dimen/_10sdp">
                    <ImageView
                        android:id="@+id/tv_default"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:src="@drawable/default_address"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_5sdp"
                        />
                </LinearLayout>
            </LinearLayout>

            <com.cradlevendor.customui.CustomTextView
                android:visibility="gone"
                android:id="@+id/tvBankSortCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_sort_code"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp" />
        </LinearLayout>
    </RelativeLayout>
</layout>