<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/vendor_logo_bg">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:src="@drawable/logo_new"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:src="@drawable/logo_shape"/>
            <com.cradlevendor.customui.CustomTextviewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:textAlignment="center"
                android:text="@string/fill_the_below_information_to_login_in"
                android:textColor="@color/white"/>
            <RelativeLayout
                android:layout_marginTop="@dimen/_35sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_290sdp"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250sdp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:elevation="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_20sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="@dimen/_15sdp">
                        <com.cradlevendor.customui.CustomTextviewBold
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:layout_marginTop="@dimen/_19sdp"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_37sdp"
                            android:orientation="horizontal"
                            android:background="@drawable/shap_vendor_edit_txt">
                            <ImageView
                                android:layout_width="@dimen/_19sdp"
                                android:layout_height="@dimen/_19sdp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:src="@drawable/user"/>
                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/edtMobileNo"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center|start"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:textAlignment="viewStart"
                                android:imeOptions="actionNext"
                                android:inputType="textEmailAddress"
                                android:background="@null"
                                android:singleLine="true"
                                android:paddingStart="@dimen/_10sdp"
                                android:textSize="@dimen/_10ssp" />
                        </LinearLayout>


                        <com.cradlevendor.customui.CustomTextviewBold
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_37sdp"
                            android:orientation="horizontal"
                            android:background="@drawable/shap_vendor_edit_txt">
                            <ImageView
                                android:layout_width="@dimen/_19sdp"
                                android:layout_height="@dimen/_19sdp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:src="@drawable/lock_vendor"/>
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <androidx.appcompat.widget.AppCompatEditText
                                    android:id="@+id/edt_pass"
                                    android:layout_toStartOf="@+id/iv_user_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center|start"
                                    android:layout_marginStart="@dimen/_10sdp"
                                    android:textAlignment="viewStart"
                                    android:imeOptions="actionNext"
                                    android:inputType="textPassword"
                                    android:background="@null"
                                    android:singleLine="true"
                                    android:paddingStart="@dimen/_10sdp"
                                    android:textSize="@dimen/_10ssp" />
                                <ImageView

                                    android:id="@+id/iv_user_password"
                                    android:layout_width="@dimen/_17sdp"
                                    android:layout_height="@dimen/_17sdp"
                                    android:layout_marginLeft="@dimen/_10sdp"
                                    android:layout_centerVertical="true"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginRight="@dimen/_10sdp"
                                    android:src="@drawable/password_hidden"
                                    />
                            </RelativeLayout>

                        </LinearLayout>


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            >

                            <CheckBox
                                android:visibility="invisible"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:text="@string/remember_me"
                                android:textSize="@dimen/_9sdp" />

                            <com.cradlevendor.customui.CustomTextviewBold
                                android:id="@+id/tv_forgot_pass"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/_10sdp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:text="@string/forgot_password"
                                android:textSize="@dimen/_9sdp" />
                        </RelativeLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <ImageView
                    android:id="@+id/submit_button"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:elevation="@dimen/_10sdp"
                    android:src="@drawable/next_vendor_new" />

            </RelativeLayout>
            <com.cradlevendor.customui.CustomTextviewBold
                android:id="@+id/tv_signUpOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>