<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/vendor_logo_bg">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_27sdp"
                android:src="@drawable/otp"/>
            <com.cradlevendor.customui.CustomTextviewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/otp_enter"
                android:textColor="@color/white"/>
            <RelativeLayout
                android:layout_marginTop="@dimen/_35sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_190sdp"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:elevation="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_20sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.cradlevendor.customui.CustomTextviewBold
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_25sdp"
                            android:text="@string/otp"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_37sdp"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_15sdp"
                            android:background="@drawable/shap_vendor_edit_txt"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/_19sdp"
                                android:layout_height="@dimen/_19sdp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:src="@drawable/user" />

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/editOtp"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:background="@null"
                                android:gravity="center|start"
                                android:imeOptions="actionNext"

                                android:paddingStart="@dimen/_10sdp"
                                android:singleLine="true"
                                android:textAlignment="viewStart"
                                android:textSize="@dimen/_10ssp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <ImageView
                    android:id="@+id/submit_button"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:elevation="@dimen/_10sdp"
                    android:src="@drawable/next_vendor_new" />

            </RelativeLayout>
            <com.cradlevendor.customui.CustomTextviewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textAlignment="center"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_130sdp"
                android:text="@string/allready_have_an_account_sign_in"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <LinearLayout
            android:id="@+id/ll_resend_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:orientation="vertical">

            <com.cradlevendor.customui.CustomTextView
                android:id="@+id/tv_SignUp_user"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:maxLines="1"
                android:text="@string/don_t_receive_the_otp_resend_otp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:singleLine="true" />
            <com.cradlevendor.customui.CustomTextviewBold
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="timer"/>
        </LinearLayout>
    </RelativeLayout>
</layout>